# DevShelfApi

./: .dockerignore  .env.example  ARQUITECTURA.md  BITACORA.md  Dockerfile  README.md  TASKS.md  alembic.ini  dev.db  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  celery_app.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py
app/api/v1/routes/: auth.py  resources.py
app/core/: config.py  logging.py  pipeline.py  security.py  workers.py
app/db/: session.py
app/models/: __init__.py  resource.py  user.py
app/schemas/: resource.py  user.py
app/services/: auth.py
cmd_pkg/: __init__.py
contracts/: schemas.py
docs/: agent.md  skills.md
internal/pipeline/: orchestrator.py
tests/: test_auth.py  test_resources_crud.py  test_root.py
